--- a/index.html
+++ b/index.html
@@ -322,64 +322,46 @@
         </p>
 
         <div class="row text-center">
+          <!-- CARD 1 -->
           <div class="col-12 col-md-4 mb-5">
             <div class="card">
+              <img class="card-img-top" src="IMG/Foto10.png" alt="HTML, CSS y JavaScript">
               <div class="card-body">
-                <img src="IMG/Ebay.png" width="100px" height="100px" alt="">
-                <p class="mt-4">
-                  HTML,CSS
-                  y Javascript
-                </p>
-                <h2 class="my-5">
-                  $ 300
-                </h2>
-
+                <p class="mt-4">HTML, CSS y JavaScript</p>
+                <h2 class="my-4">$ 300</h2>
                 <button class="btn btn-dark" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
-                  aria-controls="staticBackdrop" type="button">Agregar
-                  al carrito
+                  aria-controls="staticBackdrop" type="button">
+                  Agregar al carrito
                 </button>
               </div>
             </div>
           </div>
 
+          <!-- CARD 2 -->
           <div class="col-12 col-md-4 mb-5">
-            <div class="card ">
+            <div class="card">
+              <img class="card-img-top" src="IMG/Foto1.png" alt="JAVA para novato">
               <div class="card-body">
-                <img src="IMG/Ebay.png" width="100px" height="100px" alt="">
-                <p class="mt-4">
-                  JAVA
-                  para novato
-                </p>
-                <h2 class="my-5">
-                  $ 400
-                </h2>
-
-
-
-
+                <p class="mt-4">JAVA para novato</p>
+                <h2 class="my-4">$ 400</h2>
                 <button class="btn btn-dark" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
-                  aria-controls="staticBackdrop" type="button">Agregar
-                  al carrito
+                  aria-controls="staticBackdrop" type="button">
+                  Agregar al carrito
                 </button>
               </div>
             </div>
           </div>
 
+          <!-- CARD 3 -->
           <div class="col-12 col-md-4 mb-5">
-            <div class="card ">
+            <div class="card">
+              <img class="card-img-top" src="IMG/Foto11.png" alt="PHP y MYSQL">
               <div class="card-body">
-                <img src="IMG/Ebay.png" width="100px" height="100px" alt="">
-                <p class="mt-4">
-                  PHP y
-                  MYSQ
-                </p>
-                <h2 class="my-5">$ 500
-                </h2>
-
-
+                <p class="mt-4">PHP y MYSQL</p>
+                <h2 class="my-4">$ 500</h2>
                 <button class="btn btn-dark" data-bs-toggle="offcanvas" data-bs-target="#staticBackdrop"
-                  aria-controls="staticBackdrop" type="button">Agregar
-                  al carrito
+                  aria-controls="staticBackdrop" type="button">
+                  Agregar al carrito
                 </button>
               </div>
             </div>
@@ -763,7 +745,7 @@
 
                   <div class="col-12 col-md-6 ">
                     <input type="number" class="form-control mb-3" placeholder="Número de la tarjeta"
-                      name="numeroTarjeta" id="numeroTarjeta">
+                      name="numeroTarjeta" value="5134675489765345" id="numeroTarjeta">
                   </div>
                   <p class="text-success d-none" id="msgTarjeta"></p>
 
@@ -772,8 +754,8 @@
                       id="duenoTarjeta">
                   </div>
                   <div class="col-12 col-md-6">
-                    <input type="text" class="form-control mb-3" placeholder="DD/MM/AAAA" name="numeroAno"
-                      id="numeroAno">
+                    <input type="text" class="form-control mb-3" placeholder="DD/MM/AAAA" value="01/06/2029"
+                      name="numeroAno" id="numeroAno">
                   </div>
                   <div class="col-12 col-md-6">
                     <input type="number" class="form-control" placeholder="CVV" name="numeroCVV" id="numeroCVV">
